--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						 <img src="images/profile pic.png" alt="Asuvila Marion" style="width:200px; border-radius:70%; margin-bottom:50px;" />
-						<h1>Asuvila Marion<br />
-						Welcome to my Portfolio</h1>
-						<p>I'm a Data Analyst with experience in visualization using Power BI and Excel, and in statistical analysis; both descriptive methods like measures of dispersion and central tendency, and inferential methods like regression, hypothesis testing, and correlation.
-                        I’m skilled in data cleaning and preparation, and I also work with Python for analysis, while continuing to build my confidence in R. I’m currentlyalso taking a web scraping masterclass to strengthen my ability to fetch data directly from online sources. <br />
-							 Ready to deliver impactful solutions through both independent and collaborative projects. </p>
+						 <img src="images/profile pic.png" alt="Asuvila Marion" style="width:200px; border-radius:50%; margin-bottom:50px;" />
+						<h1>Asuvila Marion</h1>
+						<h3>Data Analyst | Power BI | Python | Excel</h3>
+						<p> I’m a Data Analyst skilled in Power BI, Excel, Python, and statistical analysis. Experienced in data cleaning, visualization, and exploratory analysis. Currently building expertise in R and web scraping. Passionate about turning raw data into actionable insights. </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -50,19 +48,7 @@
 
 						<!-- Posts -->
 							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="https://github.com/Asupah-ai/Web-Scraping/blob/main/Books_to_scrape.ipynb">Python<br />
-										Web-Scraping <br />
-									Books to Scrape</a></h2>
-									</header>
-									<a href="https://github.com/Asupah-ai/Web-Scraping/blob/main/Books_to_scrape.ipynb" class="image fit"><img src="images/Web scraping.png" alt="" /></a>
-									<p> Scraped and analyzed book data (title, price, rating, availability) from Books to Scrape using Python (requests, BeautifulSoup, Pandas, Matplotlib).
-                                        Performed exploratory analysis to understand rating distributions, price trends, and identified highly-rated, expensive books.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/Asupah-ai/Web-Scraping/blob/main/Books_to_scrape.ipynb" class="button">View Project </a></li>
-									</ul>
-								</article>
+
 								<article>
 									<header>
 										<h2><a href="https://app.powerbi.com/view?r=eyJrIjoiMmQ1YmZiZWItNThkMC00Y2U2LWFmYTctMzI5MjhhNDhlODBkIiwidCI6ImQyZDRlOTgxLWY5ZGUtNGViMS1iZDlhLWU3NjkwZWRiZjRjMiJ9">Power Bi<br />
@@ -81,52 +67,39 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="https://github.com/Asupah-ai/Excel/blob/main/Personal%20finance%20tracker.xlsx">Excel<br />
+										Personal Finance Tracker Dashboard</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/Asupah-ai/Excel/blob/main/Personal%20finance%20tracker.xlsx" class="image fit"><img src="images/finance tracker.png" alt="" /></a>
+									<p> A dynamic dashboard fully built in excel to track income, spending, and savings performance. It provides a clear view of:<br>
+
+                                        Financial Overview: balance, income, and expenditure.<br>
+
+                                        Spending Insights: top categories such as rent, groceries, and entertainment.<br>
+
+                                        Income Sources: diversified streams from YouTube, Teachable, and consulting.<br>
+
+                                        Trend Analysis: monthly and weekly income vs. spending visualization.<br>
+
+                                        This project highlights my expertise in data visualization, financial analytics, and dashboard design, enabling users to make informed financial decisions at a glance.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Asupah-ai/Excel/blob/main/Personal%20finance%20tracker.xlsx" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
+																<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="https://github.com/Asupah-ai/Web-Scraping/blob/main/Books_to_scrape.ipynb">Python<br />
+										Web-Scraping <br />
+									Books to Scrape</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/Asupah-ai/Web-Scraping/blob/main/Books_to_scrape.ipynb" class="image fit"><img src="images/Web scraping.png" alt="" /></a>
+									<p> Scraped and analyzed book data (title, price, rating, availability) from Books to Scrape using Python (requests, BeautifulSoup, Pandas, Matplotlib).
+                                        Performed exploratory analysis to understand rating distributions, price trends, and identified highly-rated, expensive books.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Asupah-ai/Web-Scraping/blob/main/Books_to_scrape.ipynb" class="button">View Project </a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+		
 							</section>
 
 
@@ -158,7 +131,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy;@ 2025 Asuvila Marion</li><li>Design: <a href="https://github.com/Asupah-ai/AsuvilaMarion.github.io">My Portfolio</a></li></ul>
 					</div>
 
 			</div>
